Edit css & html files to correct color contrast for different elements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@
   }
 
   .logo-txt {
-    color: #6070ff;
+    color: #5664e5;
     font-weight: bold;
     font-size: 18px;
   }
@@ -211,7 +211,7 @@
 
   .stack {
     font-size: 12px;
-    color: #6070ff;
+    color: #4c5ace;
     float: left;
     background-color: #ebebff;
     padding: 4px 12px 4px 12px;
@@ -703,7 +703,7 @@
   }
 
   .logo-txt {
-    color: #6070ff;
+    color: #5664e5;
     font-weight: bold;
     font-size: 18px;
     height: 24px;
@@ -859,7 +859,7 @@
   .stack {
     font-size: 12px;
     line-height: 16px;
-    color: #6070ff;
+    color: #4c5ace;
     float: left;
     background-color: #ebebff;
     padding: 4px 12px 4px 12px;
@@ -1219,7 +1219,7 @@
     text-align: center;
     vertical-align: middle;
     background-color: #fff;
-    color: #6070ff;
+    color: #5664e5;
     border: solid 1px #6070ff;
     padding: 12px 16px 12px 16px;
     border-radius: 8px;
@@ -1233,7 +1233,7 @@
     font-weight: 500;
     text-align: center;
     vertical-align: middle;
-    background-color: #6070ff;
+    background-color: #5664e5;
     color: #fff;
     border: solid 1px #fff;
     padding: 12px 16px 12px 16px;
